Remove deprecated sun.misc.BASE64Decoder.